--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     </form>
 
     <div class="w-full flex items-center justify-center bg-blue-300 mt-10">
-        <div class="w-[400px] h-[500px] bg-gray-300">
+        <div class="w-[400px] h-[500px] ">
             <h1 class="country text-4xl text-center mt-10"></h1>
+            <div class="flex justify-center items-center my-6">
+                <img class="weather-img" src="" alt="">
+            </div>
+
             <h2 class="temp text-3xl text-center mt-8"></h2>
 
         </div>
